parent/k8s/service-b.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
  labels:
    app: service-b
spec:
  selector:
    app: service-b
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
  type: ClusterIP
